--- a/src/app/new-entry/new-entry.component.scss
+++ b/src/app/new-entry/new-entry.component.scss
@@ -1,3 +1,7 @@
+form > *:first-child {
+  margin-top: 0;
+}
+
 #duration-hr, #duration-min {
   min-width: 0;
   width: 5rem;
