--- a/src/styles.scss
+++ b/src/styles.scss
@@ -198,7 +198,7 @@ a.button--primary {
   }
 }
 
-fieldset {
+.fieldset {
   border: none;
   margin: 2rem 0;
   padding: 0;
